# ansible-inventory

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vale.ini  .yamllint.yml  BATCH_GROUPING_TEST_REPORT.md  CLEANUP_SUMMARY.md  COMPLEXITY_COMPARISON.md  CROSS_PLATFORM_IMPLEMENTATION_REPORT.md  DASHBOARD_INVENTORY.md  GEMINI.md  GETTING_STARTED.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md  ansible.cfg  create_test_inventory.py  filter_hosts.py  generate_actual_inventory.py  inventory-config.yml  inventory-config.yml.example  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  simple_batch_test.py  simple_csv_converter.py  simplified_approach.md  simulate_ansible_inventory.py  test_batch_functionality.py  test_cross_platform_locking.py  test_inventory_development.yml  test_inventory_generation.py  test_inventory_production.yml  test_inventory_test.yml  test_validation.py  (+1 more)
.cursor/rules/: ansible-inventory.mdc  docs-style.mdc  git-workflow.mdc  project-standards.mdc  tests.mdc
.cursor/rules/agent-requested/: refactor-checklist.mdc
docs/: README.md  ansible_inventory.md  ci.md  configuration.md  contributing.md  csv_format.md  development.md  faq.md  getting-started.md  gitlab-cicd.md  index.md  installation.md  makefile.md  quick-reference.md  troubleshooting.md  usage.md
docs/getting-started/: adding-systems.md
docs/legacy/: index.md
docs/legacy/development/: setup.md
docs/legacy/getting-started/: adding-systems.md  installation.md  quick-start.md
docs/legacy/operations/: troubleshooting.md
docs/legacy/reference/: adding-systems.md  configuration.md  quick-reference.md
docs/operations/: deployment.md
docs/reference/: adding-systems.md  quick-reference.md
inventory/: USAGE.md  acceptance.yml  constructed.yml  development.yml  hosts.yml  production.yml  test.yml
inventory/group_vars/: env_acceptance.yml  env_development.yml  env_production.yml  env_test.yml
inventory/group_vars/all/: geographic_locations.yml
inventory/host_vars/: db01.yml  dev-api-01.yml  dev-db-01.yml  dev-web-01.yml  test-api-01.yml  test-cache-01.yml  test-db-01.yml  test-monitor-01.yml  test-web-01.yml  web01.yml
inventory_source/: hosts.csv  test_batch_sample.csv  test_custom.csv
scripts/: __init__.py  ansible_inventory_cli.py  config.py  generate_inventory.py  geographic_utils.py  models.py  utils.py
scripts/commands/: __init__.py  base.py  generate_command.py  geographic_command.py  health_command.py  import_command.py  lifecycle_command.py  validate_command.py
scripts/core/: __init__.py  config.py  geographic.py  models.py  utils.py
scripts/managers/: __init__.py  group_vars_manager.py  host_manager.py  inventory_manager.py  validation_manager.py
tests/: test_edge_cases.py  test_host_manager.py  test_instance_validation.py  test_inventory_generation.py
