[metadata]
name = ansible-inventory-cli
version = 4.0.0
description = Enterprise-grade Ansible inventory management with unified CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/company/ansible-inventory-cli
author = Infrastructure as Code Team
author_email = devops@company.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Systems Administration
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML>=6.0
    pathlib2>=2.3.0; python_version<"3.4"

[options.packages.find]
where = .
include = scripts*

[options.extras_require]
dev =
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pre-commit>=3.0.0
    isort>=5.12.0
    bandit>=1.7.0
    safety>=2.3.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-mock>=3.10.0
    coverage>=7.0.0

# Console script entry point for when package is installed
# Usage: pip install -e . && ansible-inventory-cli <command>
# For direct script execution use: python scripts/ansible_inventory_cli.py <command>
[options.entry_points]
console_scripts =
    ansible-inventory-cli = scripts.ansible_inventory_cli:main

# Flake8 (Python Linting)
[flake8]
max-line-length = 88
max-complexity = 10
extend-ignore =
    E203,
    E501,
    W503,
    W504,
    C901,
exclude =
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    .venv,
    venv,
    env,
    ENV,
    .pytest_cache,
    .mypy_cache,
    logs,
    backups,
    archive
per-file-ignores =
    __init__.py:F401
    scripts/config.py:E501
docstring-convention = google
import-order-style = google

# yapf (Alternative formatter - not used, but keeping for reference)
[yapf]
based_on_style = pep8
spaces_before_comment = 4
split_before_logical_operator = true
column_limit = 88 